working on ie issues

--- a/stylesheets/spacemonkey.css
+++ b/stylesheets/spacemonkey.css
@@ -165,7 +165,7 @@
 .star {
   animation-name: star;
   animation-delay: 0s;
-  animation-duration: 10s;
+  animation-duration: 20s;
   animation-timing-function: linear;
   animation-iteration-count: infinite;
   -webkit-animation-name: star;
@@ -177,6 +177,9 @@
 
 @keyframes star {
   0% {
+    transform: translate3d(0px, 0, 0px);
+  }
+  50% {
     transform: translate3d(0px, 1450px, 0px);
   }
   100% {
